--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </head>
 
   <body class="overflow-x-hidden text-slate-800 bg-white">
-		<!-- step 1 -->
+		<!-- step 2 -->
     <div id="header"></div>
     <script>
       fetch('./components/header.html')
@@ -623,6 +623,6 @@
     </div>
 
     <script src="./package/aos.js"></script>
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
