--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </head>
 
   <body class="overflow-x-hidden text-slate-800 bg-white">
-		<!-- step 4 -->
+		<!-- step 5 -->
     <div id="header"></div>
     <script>
       fetch('./components/header.html')
@@ -156,8 +156,8 @@
       <img src="./imgs/hero.png" alt="Alandalus mall glass roof atrium" class="absolute z-[-1] inset-0 h-full w-full object-cover" loading="eager" />
       <div class="container !py-[100px] md:!py-[200px] relative z-10">
         <div class="max-w-3xl text-white">
-          <p data-aos="fade-up"  class="text-base md:text-[24px] mb-5">Sustainability At</p>
-          <h1   class="text-6xl md:text-[150px] font-black leading-[0.95] tracking-tight mb-6">
+          <p data-aos="fade-up" data-i18n="home.hero.kicker" class="text-base md:text-[24px] mb-5">Sustainability At</p>
+          <h1 data-aos-delay="100" data-aos="fade-up" class="text-6xl md:text-[150px] font-black leading-[0.95] tracking-tight mb-6">
             <span data-i18n="home.hero.title">Alandalus</span>
           </h1>
 
