--- a/environment.html
+++ b/environment.html
@@ -510,7 +510,7 @@
             </div>
           </div>
         </div>
-        <img class="hidden lg:block absolute rtl:left-0 ltr:right-0 top-0 h-full object-center" src=".././imgs/environment/footer.png" alt="" aria-hidden="true" />
+        <img class="hidden lg:block absolute rtl:left-0 ltr:right-0 top-0 h-full object-center" src="././imgs/environment/footer.png" alt="" aria-hidden="true" />
       </section>
 
       <footer class="py-6">
